01-infra/demo-application/tests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-app
  labels:
    istio-injection: enabled
    platform.io/component: demo-application
    app.kubernetes.io/name: demo-app
